refactor(mask):重构脱敏规则类以使用record类型- 将 MaskRule 类从普通类改为 record 类型 - 移除了 Lombok 的 @Data 注解及相关字段定义 - 更新了 MaskRuleGroup 中对 MaskRule 的调用方式 - 修改了 ObjectDataMasker 和 ObjectMaskPrinter 中对 MaskRule 属性的访问方法 - 优化了 Map 类型字段规则的转换逻辑 - 改进了字段值获取和设置时的异常处理机制